<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/victory_text_congrats"
        android:textSize="55sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_scored"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/tv_victory_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_placeholder"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/is_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_high_score"
        android:textSize="30sp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Back to Main Menu"
        android:layout_gravity="center_horizontal"
        android:onClick="onBtnBackToMainMenu"/>

</LinearLayout>