<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_difficulty"
        android:layout_gravity="center_horizontal"/>

    <Spinner
        android:id="@+id/spinner_difficulty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:entries="@array/array_difficulties"/>

    <Button
        android:id="@+id/btn_settings_reset_score_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_reset_score_list"
        android:onClick="onBtnSubmitClick"
        android:layout_gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_settings_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn_save"
        android:onClick="onBtnSettingsClicked"/>

    <Button
        android:id="@+id/btn_settings_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:onClick="onBtnSettingsClicked"
        android:layout_gravity="center_horizontal"/>


</LinearLayout>