<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_main_start_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_game"
        android:layout_centerHorizontal="true"
        android:onClick="onBtnMainMenuClicked"/>

    <Button
        android:id="@+id/btn_main_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_main_start_game"
        android:text="@string/btn_settings"
        android:layout_centerHorizontal="true"
        android:onClick="onBtnMainMenuClicked"/>

    <Button
        android:id="@+id/btn_main_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_main_settings"
        android:text="@string/btn_score_list"
        android:layout_centerHorizontal="true"
        android:onClick="onBtnMainMenuClicked"/>

</RelativeLayout>